displaying pair error + organizing

--- a/scoresheet-template.html
+++ b/scoresheet-template.html
@@ -13,44 +13,50 @@
 <table>
     <caption>Lowest orientation error (good)</caption>
     <tr>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_0_0" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_0_1" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_0_ext" src="" height=256></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_0_ref" src="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_0_0" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_0_1" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_0_ext" src="" title="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_0_ref" src="" title="" height=256></td>
     </tr>
+    <tr><td colspan="4" style="text-align: center; vertical-align: middle; width:100%;" id="ornt_low_0_error">pair error: </td></tr>
     <tr>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_1_0" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_1_1" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_1_ext" src="" height=256></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_1_ref" src="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_1_0" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_1_1" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_1_ext" src="" title="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_1_ref" src="" title="" height=256></td>
     </tr>
+    <tr><td colspan="4" style="text-align: center; vertical-align: middle; width:100%;" id="ornt_low_1_error">pair error: </td></tr>
     <tr>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_2_0" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_2_1" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_2_ext" src="" height=256></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_2_ref" src="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_2_0" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_low_2_1" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_2_ext" src="" title="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_low_2_ref" src="" title="" height=256></td>
     </tr>
+    <tr><td colspan="4" style="text-align: center; vertical-align: middle; width:100%;" id="ornt_low_2_error">pair error: </td></tr>
 </table>
 <table>
     <caption>Highest orientation error (bad)</caption>
     <tr>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_0_0" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_0_1" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_0_ext" src="" height=256></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_0_ref" src="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_0_0" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_0_1" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_0_ext" src="" title="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_0_ref" src="" title="" height=256></td>
     </tr>
+    <tr><td colspan="4" style="text-align: center; vertical-align: middle; width:100%;" id="ornt_high_0_error">pair error: </td></tr>
     <tr>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_1_0" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_1_1" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_1_ext" src="" height=256></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_1_ref" src="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_1_0" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_1_1" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_1_ext" src="" title="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_1_ref" src="" title="" height=256></td>
     </tr>
+    <tr><td colspan="4" style="text-align: center; vertical-align: middle; width:100%;" id="ornt_high_1_error">pair error: </td></tr>
     <tr>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_2_0" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_2_1" src="" height=256 style=""></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_2_ext" src="" height=256></td>
-        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_2_ref" src="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_2_0" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_img_high_2_1" src="" title="" height=256 style=""></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_2_ext" src="" title="" height=256></td>
+        <td style="text-align: center; vertical-align: middle;"><img id="ornt_vis_high_2_ref" src="" title="" height=256></td>
     </tr>
+    <tr><td colspan="4" style="text-align: center; vertical-align: middle; width:100%;" id="ornt_high_2_error">pair error: </td></tr>
 </table>
 
 <table>
